Bug 360236 - Output window doesn't refresh after flush.
Summary: Output window doesn't refresh after flush.
Status: RESOLVED FIXED
Alias: None
Product: rkward
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: RKWard Team
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-08 00:07 UTC by Leszek Pawlowicz
Modified: 2016-03-13 19:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Leszek Pawlowicz 2016-03-08 00:07:06 UTC
Output window doesn't seem to refresh correctly after being flushed. Here's the example that doesn't work for me:

- Load a dataset
- Create a stem-and-leaf plot; displays normally.
- Press "Flush Output" button; screen wiped clean except for rkward initialized message
- Create another stem and leaf plot; nothing shows up, nothing changes (rkward initialized message still present
- Press the "Refresh Output" button; nothing happens.
- Close the output window, then open it again using. 

Reproducible: Always

Steps to Reproduce:
1.Load a dataset
2.Create a stem-and-leaf plot; displays normally.
3.Press "Flush Output" button; screen wiped clean except for rkward initialized message
4. Create another stem and leaf plot; nothing shows up, nothing changes (rkward initialized message still present
5. Press the "Refresh Output" button; nothing happens.
6. Close the output window, then open it again using the Windows -> Show Output menu command; correct output now visible.





Actual Results:  
After flushing output window, nothing shows up on subsequent commands.

Expected Results:  
Output should show up.

Windows 10 Home system, 64 GB RAM, GTX 970 graphics card. RKWARD installed using full install (i.e. not separate installs of R, KDE and RKWARD).
Comment 1 Thomas Friedrichsmeier 2016-03-08 09:51:06 UTC
Thanks for reporting. Seems to happen on Windows, only (also seen on WinXP), and not _every_ time. Particularly puzzling part is that manual refresh does not work, either.

Will try to investigate, soon.
Comment 2 Thomas Friedrichsmeier 2016-03-13 19:57:12 UTC
Git commit b6616cefd91c4c9b38b89181d53e8532e54abd13 by Thomas Friedrichsmeier.
Committed on 13/03/2016 at 19:56.
Pushed by tfry into branch 'releases/0.6.5'.

Fix for output window not refreshing after output flush on Windows.

Actually, a separate issue was that "refresh output" was broken, but this did not show as long as the auto-update mechanism was working.

M  +16   -1    rkward/windows/rkhtmlwindow.cpp
M  +1    -0    rkward/windows/rkhtmlwindow.h

http://commits.kde.org/rkward/b6616cefd91c4c9b38b89181d53e8532e54abd13