Fix for output window not refreshing after output flush on Windows.

Actually, a separate issue was that "refresh output" was broken, but this did not show as long as the auto-update mechanism was working.

BUG: 360236